Bug 223764: Inlines inside inlines that draw text-decorations shouldn't alter the baseline. (r=dbaron)

We add a baseline field to nsInlineFrame and modify
nsLineLayout::BeginSpan to take a pointer to a baseline to update. This
also means that nsFirstLetterFrame no longer needs to update its own
baseline, and instead should just pass its own field along.